# dirigo-config

./: LICENSE  README.md  pyproject.toml
dirigo_config/: __main__.py  provenance.py  system_configurator.py
dirigo_config/discovery/: devices.py
dirigo_config/ui/forms/: device_card.py  pydantic_form.py
